[package]
name = "crate2port"
version = "0.1.1"
authors = [
  "Zero King <l2dy@macports.org>",
  "Austin Ziegler <halostatue@gmail.com>",
]
edition = "2018"

[[bin]]
name = "crate2port"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cargo2port = { git = "ssh://git@github.com/halostatue/cargo2port.git" }
cargo-lock = "10"
reqwest = { version = "0.12", features = ["blocking"] }
flate2 = "1.0"
tar = "0.4"
