[package]
name = "crate2port"
version = "0.2.0"
license = "MIT"
authors = [
  "Zero King <l2dy@macports.org>",
  "Austin Ziegler <halostatue@gmail.com>",
]
edition = "2021"
rust-version = "1.89"

[lib]
name = "crate2port"
path = "src/lib.rs"

[[bin]]
name = "crate2port"
path = "src/main.rs"

[dependencies]
cargo-lock = "11"
reqwest = { version = "0.13", features = ["blocking"] }
flate2 = "1.0"
tar = "0.4"

[dev-dependencies]
goldenfile = "1.11"

[profile.release]
lto = true
strip = true
